<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C8C8C8"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/SAVE_LAYOUT_IN_APP"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/layout_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LAYOUT_TITLE"
            android:inputType="text"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/layout_default_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SET_AS_DEFAULT" />

        <CheckBox
            android:id="@+id/layout_quick_select_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ADD_TO_QUICK_SELECT_MENU" />

        <Button
            android:id="@+id/save_layout_in_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SAVE" />
    </LinearLayout>

</LinearLayout>