<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/POPUP_BACKGROUND_COLOR"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/POPUP_TOP_BAR_COLOR"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/popup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/LAYOUT_DELETION"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="22sp"
            android:textColor="@color/DEFAULT_TEXT_COLOR" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/warning_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textColor="@color/DEFAULT_TEXT_COLOR"
            android:text="@string/LAYOUT_DELETION_WARNING_MESSAGE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/decline_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/KEEP_LAYOUT"
                android:layout_weight="1"
                android:background="@color/BUTTON_BACKGROUND_COLOR"
                android:textColor="@color/BUTTON_TEXT_COLOR"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/CONFIRM_DELETION"
                android:layout_weight="1"
                android:background="@color/BUTTON_BACKGROUND_COLOR"
                android:textColor="@color/BUTTON_TEXT_COLOR"
                android:layout_margin="5dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>