<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    android:layout_marginTop="5dp"
    android:foreground="@drawable/grey_border" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/table_block_magnitude_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:text="@string/MAGNITUDE"
            android:textColor="@color/VALUE_BLOCK_TEXT"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/WHITE">

            <Spinner
                android:id="@+id/table_block_magnitude_spinner"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:entries="@array/MAGNITUDES_SPINNER" />
        </RelativeLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/table_block_unit_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:text="@string/UNIT"
            android:textColor="@color/VALUE_BLOCK_TEXT"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/WHITE">

            <Spinner
                android:id="@+id/table_block_unit_spinner"
                android:layout_width="160dp"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/table_block_date_start_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:text="@string/TIME_START"
            android:textColor="@color/TIMESTAMP_BLOCK_TEXT"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/WHITE">

            <EditText
                android:id="@+id/table_block_date_start_input"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:importantForAutofill="no" />

        </RelativeLayout>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/table_block_time_start_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:text="@string/DATE_START"
            android:textColor="@color/TIMESTAMP_BLOCK_TEXT"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/WHITE">
            <EditText
                android:id="@+id/table_block_time_start_input"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:importantForAutofill="no" />
        </RelativeLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/table_block_date_end_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:text="@string/DATE_END"
            android:textColor="@color/TIMESTAMP_BLOCK_TEXT"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/WHITE">

            <EditText
                android:id="@+id/table_block_date_end_input"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:importantForAutofill="no" />

        </RelativeLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/table_block_time_end_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:text="@string/TIME_END"
            android:textColor="@color/TIMESTAMP_BLOCK_TEXT"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/WHITE">
            <EditText
                android:id="@+id/table_block_time_end_input"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:importantForAutofill="no" />
        </RelativeLayout>
    </TableRow>
</TableLayout>