<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chart_two_block_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/chart_two_block_type_text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:text="@string/TYPE"
            android:textColor="@color/VALUE_BLOCK_TEXT"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/WHITE">

            <Spinner
                android:id="@+id/chart_two_block_type_spinner"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:entries="@array/CHART_TYPE_SPINNER" />

        </RelativeLayout>


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/chart_two_block_x_magnitude_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:text="@string/MAGNITUDE"
            android:textColor="@color/VALUE_BLOCK_TEXT"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/WHITE">

            <Spinner
                android:id="@+id/chart_two_block_x_magnitude_spinner"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:entries="@array/MAGNITUDES_SPINNER" />
        </RelativeLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/chart_two_block_x_unit_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:text="@string/UNIT"
            android:textColor="@color/VALUE_BLOCK_TEXT"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/WHITE">

            <Spinner
                android:id="@+id/chart_two_block_x_unit_spinner"
                android:layout_width="160dp"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/chart_two_block_y_magnitude_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:text="@string/MAGNITUDE"
            android:textColor="@color/VALUE_BLOCK_TEXT"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/WHITE">

            <Spinner
                android:id="@+id/chart_two_block_y_magnitude_spinner"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:entries="@array/MAGNITUDES_SPINNER" />
        </RelativeLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/chart_two_block_y_unit_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:text="@string/UNIT"
            android:textColor="@color/VALUE_BLOCK_TEXT"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/WHITE">

            <Spinner
                android:id="@+id/chart_two_block_y_unit_spinner"
                android:layout_width="160dp"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </TableRow>
</TableLayout>